// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data Reducer should have a default state 1`] = `
Object {
  "crafting": Array [
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
  ],
  "customItems": Object {},
  "furnace": Object {
    "cookingTime": 200,
    "experience": 0.1,
    "input": Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
  },
  "generic": Object {
    "input": Array [
      Object {
        "count": 1,
        "custom": false,
        "customData": Object {},
        "id": "",
        "readable": "",
        "texture": "",
        "type": "item",
      },
      Object {
        "count": 1,
        "custom": false,
        "customData": Object {},
        "id": "",
        "readable": "",
        "texture": "",
        "type": "item",
      },
    ],
  },
  "group": "",
  "output": Object {
    "count": 1,
    "custom": false,
    "customData": Object {},
    "id": "",
    "readable": "",
    "texture": "",
    "type": "item",
  },
  "tagIndex": 0,
  "tagUpdateTimers": Object {},
  "tags": Object {},
}
`;

exports[`Data Reducer should reset the crafting slot 1`] = `
Object {
  "crafting": Array [
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
  ],
  "output": Object {
    "count": 1,
    "custom": false,
    "customData": Object {},
    "id": "",
    "readable": "",
    "texture": "",
    "type": "item",
  },
}
`;

exports[`Data Reducer should reset the output slot 1`] = `
Object {
  "output": Object {
    "count": 1,
    "custom": false,
    "customData": Object {},
    "id": "",
    "readable": "",
    "texture": "",
    "type": "item",
  },
}
`;

exports[`Data Reducer should set the first empty crafting slot 1`] = `
Object {
  "crafting": Array [
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "minecraft:air",
      "readable": "Air",
      "texture": "data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "minecraft:air",
      "readable": "Air",
      "texture": "data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "minecraft:air",
      "readable": "Air",
      "texture": "data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "minecraft:air",
      "readable": "Air",
      "texture": "data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "minecraft:air",
      "readable": "Air",
      "texture": "data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "minecraft:air",
      "readable": "Air",
      "texture": "data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "minecraft:air",
      "readable": "Air",
      "texture": "data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "minecraft:air",
      "readable": "Air",
      "texture": "data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==",
      "type": "item",
    },
    Object {
      "id": "minecraft:stone",
      "readable": "Stone",
      "texture": "data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==",
    },
  ],
  "output": Object {
    "count": 1,
    "custom": false,
    "customData": Object {},
    "id": "",
    "readable": "",
    "texture": "",
    "type": "item",
  },
}
`;

exports[`Data Reducer should set the output slot 1`] = `
Object {
  "crafting": Array [
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
  ],
  "customItems": Object {},
  "furnace": Object {
    "cookingTime": 200,
    "experience": 0.1,
    "input": Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
  },
  "generic": Object {
    "input": Array [
      Object {
        "count": 1,
        "custom": false,
        "customData": Object {},
        "id": "",
        "readable": "",
        "texture": "",
        "type": "item",
      },
      Object {
        "count": 1,
        "custom": false,
        "customData": Object {},
        "id": "",
        "readable": "",
        "texture": "",
        "type": "item",
      },
    ],
  },
  "group": "",
  "output": Object {
    "count": 1,
    "custom": false,
    "customData": Object {},
    "id": "",
    "readable": "",
    "texture": "",
    "type": "item",
  },
  "tagIndex": 0,
  "tagUpdateTimers": Object {},
  "tags": Object {},
}
`;

exports[`Data Reducer should update the crafting slot 1`] = `
Object {
  "crafting": Array [
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
    Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
  ],
  "customItems": Object {},
  "furnace": Object {
    "cookingTime": 200,
    "experience": 0.1,
    "input": Object {
      "count": 1,
      "custom": false,
      "customData": Object {},
      "id": "",
      "readable": "",
      "texture": "",
      "type": "item",
    },
  },
  "generic": Object {
    "input": Array [
      Object {
        "count": 1,
        "custom": false,
        "customData": Object {},
        "id": "",
        "readable": "",
        "texture": "",
        "type": "item",
      },
      Object {
        "count": 1,
        "custom": false,
        "customData": Object {},
        "id": "",
        "readable": "",
        "texture": "",
        "type": "item",
      },
    ],
  },
  "group": "",
  "output": Object {
    "count": 1,
    "custom": false,
    "customData": Object {},
    "id": "",
    "readable": "",
    "texture": "",
    "type": "item",
  },
  "tagIndex": 0,
  "tagUpdateTimers": Object {},
  "tags": Object {},
}
`;
